# vaniabase

./: .env  .firebaserc  README.md  angular.json  eslint.config.js  index.html  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
.husky/: commit-helper.sh  commit-with-push.sh  pre-push
components/categories/: index.jsx
components/common/: arrows.jsx  backButton.jsx  form.jsx  icons.jsx  line.jsx  menuButton.jsx  pagination.jsx  titles.jsx
components/items/: ItemPreview.jsx  LastItems.jsx
components/layouts/: index.jsx
config/: index.js
context/: AuthContext.js
hooks/: useValidation.js
mock/: README.md  fix-missing-covers.ts  run-tests.sh  server.js  server.test.ts  server.ts  update-covers.ts
mock-rust/: .gitignore  Cargo.toml  Makefile  README.md  setup.sh  start.sh  test.sh
mock-rust/data/: items.seed.json
mock-rust/src/: fix_missing_covers.rs  main.rs  update_covers.rs
mock/data/: items.seed.json
pages/: 404.jsx  _app.jsx  _document.jsx  about.jsx  index.jsx
pages/api/: login.js  logout.js  register.js  user.js
pages/auth/: login.jsx  signup.jsx
pages/categories/: [category].jsx  index.jsx
pages/items/: [slug].jsx  all.jsx  new-item.jsx  search.jsx
public/fonts/: fonts_styles.css
scripts/: tmux-dev.sh
src/: app.tsx  arch.test.ts  di.ts  index.css  index.html  main.tsx  styles.css
styles/: utils.js
utils/: index.js
validations/: index.js
(+253 files in other folders)
